--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,8 @@ htmlcov/
 
 # Jupyter Notebook
 .ipynb_checkpoints
-*.ipynb
-
+COLAB_TRAINING.ipynb 
+COLAB_GUIDE.md
 # PyCharm
 .mypy_cache/
 .dmypy.json
